Terminada estructura abstract factory, falta pulir los html mostrados

--- a/DesignPatterns.csproj
+++ b/DesignPatterns.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetBrowser.WinForms" Version="2.23.3" />
+  </ItemGroup>
+
 </Project>
